Update Java options